--- a/style.css
+++ b/style.css
@@ -1,50 +1,80 @@
-html, body{
-  overflow: hidden;
-  background: #000;
-  padding: 0px;
-  margin: 0px;
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+html, body {
+    overflow: hidden;
+    background: #000;
+    padding: 0px;
+    margin: 0px;
 }
 
-#canvas{
-  cursor: crosshair;
-  z-index: 2;
-  position: absolute;
-  top: 0; left: 0;
+#canvas {
+    cursor: crosshair;
+    z-index: 2;
+    position: absolute;
+    top: 0; left: 0;
 }
 
-#overlay{
-  background: radial-gradient(ellipse at center, rgba(0,0,0,.0) 10%, rgba(0,0,0,.8) 80%, rgba(0,0,0,1) 90%, rgba(0,0,0,1) 100%);
-  z-index: 3;
-  position: absolute;
-  top:0;left:0;
-  height: 100%;
-  width: 100%;
+#overlay {
+    background: radial-gradient(ellipse at center, rgba(0,0,0,.0) 10%, rgba(0,0,0,.8) 80%, rgba(0,0,0,1) 90%, rgba(0,0,0,1) 100%);
+    z-index: 3;
+    position: absolute;
+    top:0;left:0;
+    height: 100%;
+    width: 100%;
 }
 
-#bg_glow{
-  z-index: 1;
-  position: absolute;
-  top:0;left:0;
-  height: 100%;
-  width: 100%;
+#bg_glow {
+    z-index: 1;
+    position: absolute;
+    top:0;left:0;
+    height: 100%;
+    width: 100%;
 }
 
-#info{
-  z-index: 4;
-  position: absolute;
-  color: #fff;
-  top: 0px;
-  left: 0px;
-  background: rgba(60,60,60,.6);
-  padding: 5px;
-}
-#overlay:hover{
-  cursor: pointer;
+#info {
+    z-index: 4;
+    position: absolute;
+    color: #fff;
+    top: 0px;
+    left: 0px;
+    background: rgba(60,60,60,.6);
+    padding: 5px;
 }
 
-#fps{
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  z-index: 5;
+#overlay:hover {
+    cursor: pointer;
+}
+
+#fps {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    z-index: 5;
+}
+
+#info {
+    background-color: white;
+    width: 50%;
+    margin: auto;
+    position: absolute;
+    left: 25%;
+    top: 50%;
+    transform: translate(0, -50%);
+    padding: 10px;
+}
+
+h1, h2, h3, h4, p, a {
+    color: black;
+    text-align: center;
+    font-family: 'Libre Franklin', sans-serif;
+    text-decoration: none;
+}
+
+a {
+    transition: 0.25s;
+    opacity: 0.8;
+}
+
+a:hover {
+    opacity: 1;
 }
