--- a/style.css
+++ b/style.css
@@ -54,13 +54,14 @@ html, body {
 
 #info {
     background-color: white;
-    width: 50%;
+    width: 30%;
     margin: auto;
     position: absolute;
-    left: 25%;
+    left: 35%;
     top: 50%;
     transform: translate(0, -50%);
     padding: 10px;
+    box-shadow: 0 0 10px black;
 }
 
 h1, h2, h3, h4, p, a {
@@ -73,8 +74,10 @@ h1, h2, h3, h4, p, a {
 a {
     transition: 0.25s;
     opacity: 0.8;
+    font-weight: bold;
 }
 
 a:hover {
     opacity: 1;
+    filter: brightness(75%);
 }
